--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT= 8080
-MONGO_URL=mongodb+srv://vrujalaheri30:adminVL123@cluster1.fxqzcko.mongodb.net/expenseApp
+MONGO_URL=mongodb+srv://abc:abc@yourcluster.fxqzcko.mongodb.net/expenseApp
